--- a/src/component/Category/Category.module.css
+++ b/src/component/Category/Category.module.css
@@ -30,7 +30,8 @@
 .category_box_title{
     display: flex;
     align-items: center;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-left: 5px;
     gap: 1rem;
 }
 
