--- a/src/component/NavBar/Notification/Notification.module.css
+++ b/src/component/NavBar/Notification/Notification.module.css
@@ -8,7 +8,7 @@
 
     left: -20rem;
     top: 3.5rem;
-    z-index: 222222222;
+    z-index: 2222222222;
     background-color: var(--main-bg-color);
 }
 
@@ -38,7 +38,7 @@
 
 .notification_box_info{
     line-height: 0;
-    margin-top: -0.8rem;
+    margin-top: -.8rem;
 }
 
 .notification_box_info h4{
@@ -58,16 +58,14 @@
     background-color: aqua;
 }
 
-@media screen and (max-width: 560px){
+@media screen and (max-width: 35em) {
     .notification{
-        width: 20rem;
-        height: -15rem;
+        width: 21rem;
+        left: -11rem;
     }
-
     .notification_box{
         padding: .3rem;
     }
-
     .notification_box p{
         font-size: 12px;
     }
