--- a/src/component/NavBar/Profile/Profile.module.css
+++ b/src/component/NavBar/Profile/Profile.module.css
@@ -8,7 +8,7 @@
 
     left: -17rem;
     top: 4.5rem;
-    z-index: 222222222;
+    z-index: 22222222222;
     background-color: var(--main-bg-color);
 }
 
@@ -36,11 +36,17 @@
     align-items: center;
     gap: 2rem;
     padding: 0rem 1.5rem;
-    transition: all .3s ease-in;
+    transition:  all .3s ease-in;
 }
 
 .profile_menu_one_item:hover{
     background-color: var(--icons-color);
     color: var(--shadow-dark-color);
     border-radius: .3rem;
+}
+
+@media screen and (max-width: 35em) {
+    .profile{
+        left: -13.5rem;
+    }
 }
